<resources>
    <string name="app_name">Enigma AEIOU</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="check_button">Check puzzle!</string>
    <string name="about_text">Enigma AEIOU</string>
    <string name="about_text_2">Android application</string>
    <string name="about_text_3">Author: Andrija Karadžić \n 2015.</string>
    <string name="title_activity_about">About</string>
    <string name="language_select">Language</string>
    <string name="language_select_2">Select Language</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="main_menu_button_1">Play now</string>
    <string name="main_menu_button_2">25 enigmas (0.5$)</string>
    <string name="main_menu_button_3">50 enigmas (1$)</string>
    <string name="main_menu_button_4">Get new Enigmas!</string>
    <string name="congratulations">Bravo!</string>
    <string name="main_menu">Main menu</string>
    <string name="main_menu_button_settings">Settings</string>
    <string name="current_time">Running time: </string>
    <string name="crossword_number">Enigma number:</string>
    <string name="record_time">Record time: </string>
    <string name="previous">&lt;&lt;</string>
    <string name="next">&gt;&gt;</string>
    <string name="title_activity_package_activty">Available packages</string>
    <string name="title_activity_get_package">Get new package</string>
    <string name="get_package">Get package</string>
    <string name="title_activity_select_package">Select a package</string>
    <string name="test_short">lorem</string>
    <string name="test_long">lorem ipsum sedare dolomit</string>
    <string name="title_label">Package title:</string>
    <string name="price_label">Package price:</string>
    <string name="number_label">Number of enigmas:</string>
    <string name="download_done">Download complete.</string>
    <string name="enigmas_text">enigmas</string>
    <string name="download">Downloading…</string>
    <string name="purchase_success">Purchase successful!</string>
    <string name="purchase_cancel">Purchase cancelled.</string>
    <string name="purchase_error">Purchase error!</string>
    <string name="english" translatable="false">English</string>
    <string name="serbian" translatable="false">Srpski</string>
    <string name="select_package_type">Select package type</string>
    <string name="select_type">Select type</string>
    <string name="filter_packages">Filter packages</string>
    <string name="purchased_download">You have already purchased this package. You can download it to your device.</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="main_menu_hello">Hello,</string>
    <string name="login_not_registered">You are not registered!</string>
    <string name="login_fail">Login failed!</string>
    <string name="register_link">Register now!</string>
    <string name="login_success">Login successful!</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_text">Select an empty field in the grid. Then, select a vocal (A, E, I, O, U) on the keyboard to fill in the field. Correct choice will lock the grid field. Repeat for other fields to solve the enigma. Good luck!</string>
    <string name="value_sr">sr_RS</string>
    <string name="value_en">en_US</string>

</resources>