<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#DD888888"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_packages"
        android:textSize="22sp"
        android:textColor="#ffffff"/>
    <TextView
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language_select_2"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <RadioGroup
        android:id="@+id/radio_group_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff">
        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/english"
            android:textColor="#ffffff"/>
        <RadioButton
            android:id="@+id/radio_serbian"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/serbian"
            android:textColor="#ffffff"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_package_type"
        android:textSize="18sp"
        android:textColor="#ffffff"/>
    <RadioGroup
        android:id="@+id/radio_group_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RadioGroup>
</LinearLayout>