<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#5087E1">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#5087E1"
    android:id="@+id/fragment_main_menu_id">
    <!--android:background="#5087E1"-->
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:src="@drawable/crossword_wallpaper_enigma"
        android:paddingTop="100dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="20dp"/>

    <!--<TextView-->
        <!--android:text="@string/main_menu"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="30sp"-->
        <!--android:gravity="center_horizontal" />-->

    <Button
        style="@style/MyButtonStyle"
        android:id="@+id/button_free"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_button_1"
        android:layout_marginTop="20dp"/>
    <Button
        style="@style/MyButtonStyle"
        android:id="@+id/button_get_new"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_button_4"/>
    <Button
        style="@style/MyButtonStyle"
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"/>
    <Button
        style="@style/MyButtonStyle"
        android:id="@+id/button_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_button_settings"/>

</LinearLayout>
</ScrollView>