<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <!--<View-->
            <!--android:id="@+id/separator1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:background="#d2d2d2"/>-->
        <!--<View-->
            <!--android:id="@+id/separator2"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#acacac"/>-->

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.andro.enigma.activity.GetPackageActivity">

            <TextView
                android:id="@+id/textView_package_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/title_label"
                android:gravity="left"
                android:textColor="#777777"
                />

            <TextView
                android:id="@+id/textView_package_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="TITLE"
                android:padding="5dp"
                android:gravity="left"
                />

            <TextView
                android:id="@+id/textView_package_price_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/price_label"
                android:gravity="left"
                android:textColor="#777777"
                />

            <TextView
                android:id="@+id/textView_package_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5dp"
                android:gravity="left"
                android:text="5$"
                />

            <TextView
                android:id="@+id/textView_package_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/number_label"
                android:gravity="left"
                android:textColor="#777777"
                />

            <TextView
                android:id="@+id/textView_package_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="5dp"
                android:gravity="left"
                android:text="20 enigmas"
                />

            <Button
                android:background="@drawable/button_disabled"
                android:layout_marginTop="20dp"
                android:id="@+id/button_get_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_package"
                android:visibility="gone"
                android:layout_gravity="center"/>
            <ImageButton
                android:id="@+id/image_button_get_package"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="55dp"
                android:src="@drawable/paypal_android_button"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:padding="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:background="@drawable/button_disabled"
                    android:layout_marginTop="20dp"
                    android:id="@+id/button_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_package"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/text_download"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="left"
                    android:visibility="gone"
                    android:text="@string/purchased_download"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textView_package_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/test_long"
                    />
                <ProgressBar
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="100dp"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:id="@+id/progressBar2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>